<resources>
    <string name="app_name">e-Floristry</string>

    <!--Main-->
    <string name="label_loading">Loading&#8230;</string>
    <string name="label_loading_login">Logging In&#8230;</string>
    <string name="label_loading_register">Verifying&#8230;</string>
    <string name="label_loading_resend">Re-sending&#8230;</string>

    <!--Login-->
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="btn_label_login">Login</string>
    <string name="btn_resend_verification">Re-send Verification</string>

    <!--SharePreference-->
    <string name="spMemberDetails">com.example.eflorisity.memberDetails</string>
    <string name="spMyCart">com.example.eflorisity.myCart</string>
    <!--SharePreferences Key-->
    <string name="spKeyIsLoggedIn">isLoggedIn</string>
    <string name="spKeyToken">token</string>
    <string name="spKeyId">id</string>
    <string name="spKeyFirstName">firstName</string>
    <string name="spKeyLastName">lastName</string>
    <string name="spKeyMiddleName">middleName</string>
    <string name="spKeyEmail">email</string>
    <string name="spKeyBirthday">birthday</string>
    <string name="spKeyContactNumber">contactNumber</string>
    <string name="spKeyAddress">address</string>
    <string name="spKeyState">state</string>
    <string name="spKeyCity">city</string>
    <string name="spKeyPostalCode">postalCode</string>
    <string name="spKeyPhotoUrl">photoUrl</string>
    <string name="spKeyRole">role</string>
    <string name="spKeyCartStringSet">myCart</string>


    <!--Logged In Member-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_cart">Cart</string>
    <string name="title_reports">Reports</string>
    <string name="title_account">Account</string>


    <!--Account -->
    <string name="account_information">Account Information</string>
    <string name="address_book">Address Book</string>
    <string name="policies">Policies</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>


    <!--View Item-->
    <string name="add_to_cart">Add</string>
    <string name="go_back_to_list">Back</string>


    <!--Cart-->
    <string name="btn_checkout">Checkout</string>
    <string-array name="long_clicked_row_action">
        <item>Delete</item>
    </string-array>


    <!--Checkout-->
    <string name="btn_place_order">Place Order</string>
    <string name="place_order_success">Place Order Successfull</string>
    <string name="delivery_address_str">Delivery Address</string>
    <string name="address">Address</string>
    <string-array name="str_payment_method_array">
        <item>Cash On Delivery</item>
        <item>PayPal</item>
    </string-array>
    <string name="order_notes_hint">Order Notes</string>
    <string name="paypal_client_id">AYck3V8nQuePlPoEmhEoLM6WpvF9aV5cc8-mpziWeE8wMw1dn8lX2JhfKk-ISxm_YboZGQA4ppekKlw7</string>


    <!--Address Activity-->
    <string name="region_hint">Region</string>
    <string name="province_hint">Province</string>
    <string name="city_hint">City</string>
    <string name="barangay_hint">Barangay</string>
    <string name="postal_code_hint">Postal Code</string>
    <string name="detailed_address_hint">Detailed Address</string>
    <string name="detailed_address_helper_hint">Unit number,house number,building,street name</string>
    <string name="btn_submit">Submit</string>
    <string-array name="region_list">
        <item>Metro Manila</item>
        <item>Mindanao</item>
        <item>Luzon</item>
<!--        <item>North Luzon</item>-->
<!--        <item>South Luzon</item>-->
        <item>Visayas</item>
    </string-array>
    <string name="completed_address_hint">Complete Address</string>

    <!--Register-->
    <string name="register_label">Register</string>
    <string name="firstname_hint">First Name</string>
    <string name="middlename_hint">Middle Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="emailaddress_hint">Email Address</string>
    <string name="contactnumber_hint">Contact Number</string>
    <string name="membertype_hint">Member Type</string>
    <string name="birthday_hint">Birthday</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="btn_submit_register">Submit</string>
    <string name="re_send_verification_text">Re-send Verification Code</string>
    <string name="re_send_button">Re-send</string>
    <string name="verification_code">Verification Code</string>
    <string-array name="member_type_choice">
        <item>Buyer</item>
        <item>Seller</item>
    </string-array>


    <!--Orders-->
    <string name="my_orders_label">My Orders</string>
    <string name="track_order_label">Track an Order</string>
    <string name="to_pay_label">To Pay</string>
    <string name="to_ship_label">To Ship</string>
    <string name="to_receive_label">To Receive</string>
    <string name="to_review_label">To Review</string>
    <string name="cancelled_label">Cancelled</string>
    <string name="return_refund_label">Return Refund</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_orders">No Orders</string>

    <!--OnActivityForResult Request Code-->
    <string name="address_inforation_request_code">1</string>
    <string name="checkout_request_code">2</string>
    <string name="custom_tabs_request_code">3</string>



    <!--Account Information-->
    <string name="firstname_label">First Name: </string>
    <string name="middlename_label">Middle Name: </string>
    <string name="lastname_label">Last Name: </string>
    <string name="email_label">Email: </string>
    <string name="contact_number_label">Contact Number: </string>
    <string name="birthday_label">Birthday: </string>
    <string name="btn_update_label">Update</string>
</resources>